--- a/member.html
+++ b/member.html
@@ -64,7 +64,7 @@
                 </a>
                 <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
                     <li class=" nk-drop-item">
-                        <a href="home-1.html"> Home </a>
+                        <a href="index.html"> Home </a>
                     </li>
                     <li class=" nk-drop-item">
                         <a href="member.html"> Member </a>
@@ -217,7 +217,7 @@
                 <div class="nk-portfolio-list nk-isotope nk-isotope-3-cols nk-isotope-gap">
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-4">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/ThayTriet.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -335,7 +335,7 @@
                 <div class="nk-portfolio-list nk-isotope nk-isotope-4-cols nk-isotope-gap">
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -349,7 +349,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -363,7 +363,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -377,7 +377,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -391,7 +391,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -405,7 +405,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -419,7 +419,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -433,7 +433,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -447,7 +447,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -461,7 +461,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -475,7 +475,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -489,7 +489,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -502,7 +502,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -515,7 +515,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -528,7 +528,7 @@
                     </div>
                     <div class="nk-isotope-item">
                         <div class="nk-portfolio-item nk-portfolio-item-info-style-2">
-                            <!-- <a href="home-1.html" class="nk-portfolio-item-link"></a> -->
+                            <!-- <a href="index.html" class="nk-portfolio-item-link"></a> -->
                             <img class="nk-portfolio-item-image" src="assets/images/trang.png" alt="Minimal Portfolio">
                             <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                 <div>
@@ -1209,7 +1209,7 @@
                         </div>
                         <div class="nk-isotope-item">
                             <div class="nk-portfolio-item nk-portfolio-item-info-style-4">
-                                <a href="home-1.html" class="nk-portfolio-item-link"></a>
+                                <a href="index.html" class="nk-portfolio-item-link"></a>
                                 <img class="nk-portfolio-item-image" src="assets/images/promo-header-3.jpg" alt="Overlay Menu">
                                 <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center">
                                     <div>
