--- a/thesis.html
+++ b/thesis.html
@@ -64,7 +64,7 @@
                 </a>
                 <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
                     <li class=" nk-drop-item">
-                        <a href="home-1.html"> Home </a>
+                        <a href="index.html"> Home </a>
                     </li>
                     <li class=" nk-drop-item">
                         <a href="member.html"> Member </a>
